codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__provider_health__tests__openai_reauthentication_narrow.snap
---
source: tui/src/chatwidget/provider_health_tests.rs
expression: "super::super::tests::helpers::render_bottom_popup(&chat, 45)"
---
  Recover OpenAI
  Keep the current provider and model. Esc
  cancels without changing credentials.

› Sign in to OpenAI again

  Press enter to confirm or esc to go back
