codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__provider_health__tests__rejected_provider_identity.snap
---
source: tui/src/chatwidget/provider_health_tests.rs
expression: warning
---
⚠ OpenAI (openai) credential was rejected. Open /providers, select OpenAI, and
  press r to recover. Other providers are unchanged.
